# winia

./: Cargo.toml  README.md
.github/workflows/: rust.yml
example/: Cargo.toml
example/app/: build.gradle
example/src/: main.rs  main_page.rs
interpolator_generator/: Cargo.toml
interpolator_generator/src/: main.rs
material_color_utilities/: Cargo.toml  README
material_color_utilities/src/: blend.rs  contrast.rs  dislike.rs  lib.rs  score.rs  temperature_cache.rs
material_color_utilities/src/dynamic_color/: contrast_curve.rs  dynamic_color.rs  dynamic_scheme.rs  material_dynamic_colors.rs  mod.rs  tone_delta_pair.rs  variant.rs
material_color_utilities/src/hct/: cam.rs  hct.rs  hct_solver.rs  mod.rs  viewing_conditions.rs
material_color_utilities/src/palettes/: core.rs  mod.rs  tones.rs
material_color_utilities/src/quantize/: celebi.rs  lab.rs  mod.rs  wsmeans.rs  wu.rs
material_color_utilities/src/scheme/: dynamic_scheme.rs  mod.rs  scheme_content.rs  scheme_expressive.rs  scheme_fidelity.rs  scheme_fruit_salad.rs  scheme_monochrome.rs  scheme_neutral.rs  scheme_rainbow.rs  scheme_tonal_spot.rs  scheme_vibrant.rs
material_color_utilities/src/utils/: mod.rs  utils.rs
proc-macro/: Cargo.toml
proc-macro/src/: lib.rs
quikia/: Cargo.toml
quikia/macros/: Cargo.toml
quikia/macros/src/: lib.rs
quikia/material_color_utilities/: Cargo.toml
quikia/material_color_utilities/src/: blend.rs  score.rs
quikia/material_color_utilities/src/dynamic_color/: contrast_curve.rs  mod.rs
quikia/material_color_utilities/src/hct/: cam.rs  viewing_conditions.rs
quikia/material_color_utilities/src/quantize/: celebi.rs  mod.rs
quikia/material_color_utilities/src/scheme/: scheme.rs  scheme_content.rs  scheme_fidelity.rs  scheme_monochrome.rs  scheme_tonal_spot.rs  scheme_vibrant.rs  variant.rs
quikia/material_color_utilities/src/utils/: mod.rs
quikia/src/: lib.rs  test.rs
quikia/src/animation/: animation.rs  animation_queue.rs  animation_set.rs  mod.rs
quikia/src/app/: app.rs  mod.rs  window.rs
quikia/src/component/: button.rs  mod.rs
quikia/src/layout/: axis_layout.rs  flow.rs
quikia/src/property/: alignment_property.rs  bool_property.rs  color_property.rs  float_property.rs  gravity_property.rs  item_property.rs  mod.rs  size_property.rs  text_property.rs
quikia/src/text/: mod.rs  style.rs  styled_text.rs  text_layout.rs
quikia/src/ui/: children.rs  display_parameter.rs  image.rs  item.rs  item_event.rs  logical_x.rs  mod.rs  pointer_event.rs  rectangle.rs  ripple.rs
quikia/src/ui/additional_property/: baseline.rs  mod.rs  shadow.rs
quikia/src/widget/: mod.rs  rectangle.rs  stack.rs
skiwin/: Cargo.toml
skiwin/src/: cpu.rs  d3d.rs  gl.rs  lib.rs  vulkan.rs
softbuffer/: Cargo.toml
winia/: Cargo.toml
winia-video/: Cargo.toml
winia-video/src/: lib.rs  video.rs  video_player.rs
winia/material_color_utilities/src/: dislike.rs  lib.rs  temperature_cache.rs
winia/material_color_utilities/src/dynamic_color/: material_dynamic_colors.rs
winia/material_color_utilities/src/palettes/: mod.rs  tones.rs
winia/material_color_utilities/src/scheme/: mod.rs  scheme_expressive.rs  scheme_fruit_salad.rs
winia/material_color_utilities/src/utils/: utils.rs
winia/src/: core.rs  lib.rs  shared.rs
winia/src/app/: app.rs  app_proxy.rs  mod.rs  theme.rs  window.rs
winia/src/collection/: mod.rs  w_hash_map.rs  w_linked_list.rs  w_vec.rs
winia/src/core/: mod.rs  ref_clone.rs
winia/src/icon/: mod.rs  outlined.rs  rounded.rs  sharp.rs
winia/src/layout/: flex_layout.rs  mod.rs  stack.rs
winia/src/property/: bool_property.rs  children.rs  color_property.rs  gravity_property.rs  inner_position_property.rs  item_property.rs  mod.rs  num_property.rs  property.rs  size_property.rs  text_property.rs
winia/src/shared/: children.rs  local_shared.rs  mod.rs  shared.rs  shared_alignment.rs  shared_bool.rs  shared_color.rs  shared_drawable.rs  shared_gravity.rs  shared_inner_position.rs  shared_item.rs  shared_list.rs  shared_num.rs  shared_size.rs  shared_text.rs  shared_un_send.rs  shared_unit.rs  shared_vec.rs
winia/src/text/: mod.rs  paragraph.rs  paragraph_builder.rs  style.rs  styled_text.rs  text_layout.rs  text_style.rs
winia/src/theme/: material_theme.rs  mod.rs
winia/src/ui/: animation.rs  component.rs  item.rs  layout.rs  mod.rs  theme.rs  unit.rs
winia/src/ui/animation/: animation.rs  interpolator.rs  local_animation.rs  mod.rs  parameter_option.rs  target.rs
winia/src/ui/app/: app.rs  app_context.rs  mod.rs  window_context.rs
winia/src/ui/component/: button.rs  checkbox.rs  divider.rs  filled_text_field.rs  icon.rs  image.rs  mod.rs  page.rs  progress_indicator.rs  radio.rs  radio_button.rs  radio_group.rs  rectangle.rs  ripple.rs  slider.rs  switch.rs  text.rs  toast.rs
winia/src/ui/item/: dimension.rs  display_parameter.rs  inner_position.rs  item.rs  item_event.rs  logical_x.rs  mod.rs  scroller.rs  size.rs
winia/src/ui/layout/: column.rs  flex.rs  list.rs  mod.rs  relative.rs  row.rs  scroll_area.rs  stack.rs
winia/src/ui/theme/: color.rs  colors.rs  dimensions.rs  elevation.rs  material_style.rs  material_theme.rs  mod.rs  shape.rs  style.rs  styles.rs  theme.rs  typescale.rs
winia/src/ui/widget/: mod.rs  rectangle.rs
winia/src/uib/: app.rs  children.rs  display_parameter.rs  drawing_item.rs  edgs.rs  item.rs  item_event.rs  logical_x.rs  mod.rs  mouse_event.rs  multicast_event.rs  pointer_event.rs  text_block.rs
winia/src/uib/additional_property/: baseline.rs  shadow.rs
winia/src/widgetb/: flex_layout.rs  image.rs  mod.rs  rectangle.rs  stack.rs  text.rs
winia_test/: Cargo.toml
winia_test/src/: animation_test.rs  blur_test.rs  button_test.rs  checkbox_test.rs  flex_test.rs  focus_test.rs  icon_test.rs  image_test.rs  layer_test.rs  layout_animation_test.rs  list_test.rs  login_test.rs  main.rs  matrix_tansform_test.rs  progress_indicator_test.rs  radio_test.rs  rectangle_test.rs  ripple_test.rs  scroll_area_test.rs  slider_test.rs  stack_test.rs  switch_test.rs  text_test.rs  video_test.rs
(+1 files in other folders)
