[package]
name = "winia-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winia = { path = "../winia" }
env_logger = "0.11.6"
log = "0.4.25"
material-colors = "0.4.2"
clone-into-closure = { path = "/home/grounzer/RustroverProjects/clone-into-closure/clone-into-closure" }

#winit = {version = "0.29.3",features = ["android-native-activity"]}

[build-dependencies]
gl_generator = "0.14"
cfg_aliases = "0.2.1"

[patch.crates-io]

[lib]
crate-type=["cdylib"]
path= "src/main.rs"

