[package]
name = "quikia"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
glutin = "0.31.3"
glutin-winit = "0.4.2"
winit = {version = "0.29.14",features = ["android-native-activity", "x11", "wayland"]}
gl = "0.14.0"
raw-window-handle = "0.5.2"
env_logger = "0.11.3"
icu = "1.4.0"
reqwest = {version = "0.12.2",features = ["blocking"]}
material_color_utilities = {path = "material_color_utilities"}
[target.'cfg(target_os = "windows")'.dependencies]
winapi = {version = "0.3.9", features = ["winreg", "dwmapi", "windef", "winuser"] }
skia-safe = {version = "0.72.0",features = ["gpu","gl","textlayout","embed-icudtl","svg"]}

[target.'cfg(target_os = "linux")'.dependencies]
skia-safe = {version = "0.72.0",features = ["gpu","gl","textlayout","embed-icudtl","svg", "x11", "wayland"]}


[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.13.3"