[package]
name = "skiwin"
version = "0.1.0"
edition = "2021"

[features]
vulkan = ["ash", "vulkano", "skia-safe/vulkan", "skia-safe/gpu"]
gl = ["skia-safe/gl", "skia-safe/gpu", "glutin"]
#d3d = ["skia-safe/d3d", "windows"]

[dependencies]
bytemuck = "1.20.0"
winit = { workspace = true, features = ["rwh_06"] }
softbuffer = { git = "https://github.com/MarijnS95/softbuffer.git" }
skia-safe = {workspace = true}
ash = { version = "0.37.3", optional = true }
vulkano = { version = "0.34.1", optional = true }
glutin = { version = "0.32.1", optional = true }
#windows = { version = "0.58.0", optional = true, features = [
#    "Win32",
#    "Win32_Graphics",
#    "Win32_Graphics_Dxgi",
#    "Win32_Graphics_Direct3D12",
#    "Win32_Graphics_Direct3D",
#    "Win32_Foundation",
#    "Win32_Graphics_Dxgi_Common",
#] }