[package]
name = "skiwin"
version = "0.1.0"
edition = "2021"

[features]
vulkan = ["ash", "vulkano", "skia-safe/vulkan", "skia-safe/gpu"]
gl = ["skia-safe/gl", "skia-safe/gpu", "glutin"]
#d3d = ["skia-safe/d3d", "windows"]

[dependencies]
bytemuck = "1.21.0"
winit = { workspace = true, features = ["rwh_06"] }
skia-safe = {workspace = true}
parking_lot = {workspace = true}
softbuffer = {path = "/home/grounzer/RustroverProjects/softbuffer"}
ash = { version = "0.38", optional = true }
vulkano = { git = "https://github.com/vulkano-rs/vulkano.git", optional = true }
glutin = { version = "0.32.2", optional = true }