[package]
name = "skiwin"
version = "0.1.0"
edition = "2021"

[features]
vulkan = ["ash", "vulkano", "skia-safe/vulkan", "skia-safe/gpu"]
gl = ["skia-safe/gl", "skia-safe/gpu", "glutin"]
#d3d = ["skia-safe/d3d", "windows"]

[dependencies]
bytemuck = "1.23"
winit = { workspace = true, features = ["rwh_06"] }
skia-safe.workspace = true
parking_lot.workspace = true
softbuffer = "0.4.6"
ash = { version = "0.38", optional = true }
vulkano = { version = "0.35.1", optional = true }
glutin = { version = "0.32.3", optional = true }