[package]
name = "winia"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[features]
#default = ["vulkan"]
#vulkan = ["skiwin/vulkan"]
#gl = ["skiwin/gl"]

[dependencies]
proc-macro = { path = "proc-macro" }
skiwin = { path = "../skiwin", features = ["vulkan", "gl"] }
lazy_static = "1.5.0"
raw-window-handle = "0.6.2"
env_logger = "0.11.7"
bitflags = "2.9.0"
bezier-rs = "0.4.0"
reqwest = { version = "0.12.14", features = ["blocking"] }
material_color_utilities = { path = "../material_color_utilities" }
#skia-bindings = "0.80"
unicode-segmentation = "1.12.0"
bimap = "0.6.3"
rayon = "1.10.0"
toml = "0.8.20"
parking_lot = { workspace = true }
material-colors = "0.4.2"

[target.'cfg(target_os = "linux")'.dependencies]
winit = { workspace = true, features = ["rwh_06"] }
skia-safe = { workspace = true, features = ["all-linux"] }

[target.'cfg(target_os = "windows")'.dependencies]
winit = { workspace = true, features = ["rwh_06"] }
skia-safe = { workspace = true, features = ["d3d", "gl", "svg", "textlayout", "vulkan"] }
##winapi = {version = "0.3.9", features = ["winreg", "dwmapi", "windef", "winuser"] }

[target.'cfg(target_os = "android")'.dependencies]
skia-safe = { workspace = true, features = ["all-linux"] }
winit = { workspace = true, features = ["rwh_06", "android-native-activity"] }
#android_logger = "0.14.1"